--- a/intro.html
+++ b/intro.html
@@ -2,46 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="intro.css">
 </head>
+<link rel="stylesheet" href="intro.css">
 <body>
-    <center>
-    <h2>CALCULATER</h2>
-    <input type="text" id="result" readonly>
-    <table>
-        <tr>
-            <td><button onclick="append(7)">7</button></td>
-            <td><button onclick="append(8)">8</button></td>
-            <td><button onclick="append(9)">9</button></td>
-            <td><button onclick="operate('+')">+</button></td>
 
-        </tr>
-        <tr>
-            <td><button onclick="append(4)">4</button></td>
-            <td><button onclick="append(5)">5</button></td>
-            <td><button onclick="append(6)">6</button></td>
-            <td><button onclick="operate('-')">-</button></td>
+    <header>
+       <h1>MY PORTFOLIO</h1>
+       <ul>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#Bio">Bio</a></li>
+        <li><a href="#PortFolio">PortFolio</a></li>
+        <li><a href="#Skills">Skills</a></li>
+        <li><a href="#Contact">Contact</a></li>
+       </ul>
+    </header>
+    <main>
+       <section id="Home">
+        <h2>YUVARAJ J</h2>
+        <P><b>I BELIEVE IN</b><br><br>EAT( );SLEEP( );CODE( );REPEAT( );</P>
+        <img src="man.jpg">
+       </section>
 
-        </tr>
-        <tr>
-            <td><button onclick="append(1)">1</button></td>
-            <td><button onclick="append(2)">2</button></td>
-            <td><button onclick="append(3)">3</button></td>
-            <td><button onclick="operate('*')">*</button></td>
+       <section id="Bio">
+        <h2>About</h2>
+        
+           I am a passionate Engineer with a degree in CIVIL Engineering
+with code was at the time when I started my own blog. My struggle to customiz
+e the blog pages
+introduced me to HTML & CSS. Sooner, the excitment of having the power to stru
+cture pages on
+my own sounded amazing and that’s when I decided to purse Web development.Recen
+tly, I learnt
+Full Stack Development. I have knowledge of HTML, CSS and JavaScript, Java, C++ 
+and Data Structures.
+Rational thought process and goal-oriented planning are my strengths.I am curren
+tly on the look out
+for a challenging role to build products that make a difference.
+        </pre>
+       </section>
+       <section id="PortFolio">
+        <h2>MY PORTFOLIO</h2>
+        <P>Some of my best projects so far.</P>
+        <P><b>PERSONAL BLOG</b> - A blog where I pen my own thoughts on programming.</P>
+        <p><b>TIC TAC TOE</b> - Complete Tic Tac Toe game along with GUI using Java.</p>
+      <p><b>TIME TABLE GENERATOR</b> - A web application for automatic time table generation.</p>
 
-        </tr>
-        <tr>
-            <td><button onclick="append(0)">0</button></td>
-            <td><button onclick="clearresult('C')">C</button></td>
-            <td><button onclick="result('=')">=</button></td>
-            <td><button onclick="operate('/')">/</button></td>
+       </section>
 
-        </tr>
-    </table>
-    <script src="intro.js"></script>
-    </center>
+       <section id="Skills">
+        <h2>TECHNICAL SKILLS</h2>
+        <ul>
+            <li>HTML</li>
+            <li><progress value="90" max="100"></progress></li>
+            <li>CSS</li>
+            <li><progress value="90" max="100"></progress></li>
+            <li>JAVASCRIPT</li>
+            <li><progress value="90" max="100"></progress></li>
+        </ul>
+       </section>
+
+       <section id="Contact">
+        <h2>CONTACT ME!</h2>
+        <p>📱-776757534534</p>
+        <p>📧-ceyuvarajj@gmail.com</p>
+       </section>
+    </main>
+    <footer>
+      <p>© 2023 My Portfolio. All rights reserved.</p>
+    </footer>
 </body>
-</html>
